<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffddf6ff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textBanner"
        android:id="@+id/textBanner"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp1"
        android:id="@+id/btnApp1"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textBanner"
        android:layout_centerHorizontal="true"
        android:background="#ffe98a1e"
        android:onClick="btnClicked"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp2"
        android:id="@+id/btnApp2"
        android:background="#ffe98a1e"
        android:layout_below="@+id/btnApp1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="btnClicked"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp3"
        android:id="@+id/btnApp3"
        android:background="#ffe98a1e"
        android:layout_below="@+id/btnApp2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="btnClicked"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp4"
        android:id="@+id/btnApp4"
        android:background="#ffe98a1e"
        android:layout_below="@+id/btnApp3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="btnClicked"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp5"
        android:id="@+id/btnApp5"
        android:background="#ffe98a1e"
        android:layout_below="@+id/btnApp4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="btnClicked"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp6"
        android:id="@+id/btnApp6"
        android:layout_below="@+id/btnApp5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#C4063C"
        android:textColor="#fff6fdff"
        android:onClick="btnClicked"/>
</RelativeLayout>
